2017-10-10  Thomas Koenig  <tkoenig@gcc.gnu.org>

	PR libfortran/82233
	* gfortran.dg/execute_command_line_3.f90: New test.

2017-10-10  Will Schmidt  <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-splat-16.c: New
	* gcc.target/powerpc/fold-vec-splat-32.c: New.
	* gcc.target/powerpc/fold-vec-splat-8.c: New.

2017-10-10  Will Schmidt <will_schmidt@vnet.ibm.com>

	* gcc.target/powerpc/fold-vec-splats-char.c: New.
	* gcc.target/powerpc/fold-vec-splats-floatdouble.c: New.
	* gcc.target/powerpc/fold-vec-splats-int.c: New.
	* gcc.target/powerpc/fold-vec-splats-longlong.c: New.
	* gcc.target/powerpc/fold-vec-splats-short.c: New.

2017-10-10  Jakub Jelinek  <jakub@redhat.com>

	PR c/82437
	* c-c++-common/Wtautological-compare-7.c: New test.

2017-10-10  Bin Cheng  <bin.cheng@arm.com>

	* gcc.dg/tree-ssa/ldist-34.c: New test.

2017-10-10  Bin Cheng  <bin.cheng@arm.com>

	* gcc.dg/tree-ssa/ldist-27.c: New test.

2017-10-09  Ed Schonberg  <schonberg@adacore.com>

	* gnat.dg/class_wide4.adb, gnat.dg/class_wide4_pkg.ads,
	gnat.dg/class_wide4_pkg2.ads: New testcase.

2017-10-09  Ed Schonberg  <schonberg@adacore.com>

	* gnat.dg/class_wide3.adb, gnat.dg/class_wide3_pkg.ads: New testcase.

2017-10-09  Ed Schonberg  <schonberg@adacore.com>

	* gnat.dg/validity_check2.adb, gnat.dg/validity_check2_pkg.ads:
	New testcase.

2017-10-09  Michael Meissner  <meissner@linux.vnet.ibm.com>

	* gcc.target/powerpc/amo1.c: New test.
	* gcc.target/powerpc/amo2.c: Likewise.

2017-10-09  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/82449
	* gfortran.dg/graphite/pr82449.f: New testcase.

2017-10-09  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	PR target/82463
	* gcc.target/s390/zvector/pr82463.c: New test.

2017-10-09  Andreas Krebbel  <krebbel@linux.vnet.ibm.com>

	PR target/82465
	* gcc.target/s390/zvector/pr82465.c: New test.

2017-10-09  Wilco Dijkstra  <wdijkstr@arm.com>

	* gcc.dg/tree-ssa/ssa-dse-26.c (dg-options): Add -fno-short-enums.
